--- a/main.html
+++ b/main.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ar">
 <head>
 <meta charset="utf-8">
 <meta name="viewpot" content="initial-scale=1.0, maxmum-scale=1.0,
@@ -16,3 +16,4 @@ user-scalable=1">
 
    <script type="text/javascript" src="main.js"></script>
 </body>
+</html>
